real-project/tensorflow/test-lambda/classification_results/non_compilable/test_99.cpp.log
/home/anonymous/compare-order/real-project/tensorflow/test-lambda/test_99.cpp:16:18: error: invalid operands to binary expression ('const nb::handle' and 'const nb::handle')
   16 |   return a.first < b.first;
      |          ~~~~~~~ ^ ~~~~~~~
1 error generated.
